# Walkie

./: .flake8  .gitignore  CODE_QUALITY_REPORT.md  DEPLOY_READY.md  GITHUB_DEPLOY.md  LICENSE  PROJECT_COMPLETE.md  README.md  SETUP_COMPLETE.md  launch.py  pylint.toml  pyproject.toml  run_safe_simulation.py  run_visual_simulation.py
.github/: copilot-instructions.md
.github/workflows/: qodana_code_quality.yml
config/: hardware.yaml  simulation.yaml
docs/: index.md
scripts/: basic_control_example.py
src/: __init__.py  main.py
src/control/: __init__.py  robot_controller.py
src/hardware/: __init__.py  robot_hardware.py
src/motion_control/: __init__.py  trajectory_controller.py
src/planning/: __init__.py  path_planner.py
src/sensors/: __init__.py  sensor_manager.py
src/simulation/: __init__.py  simulator.py
src/utils/: __init__.py  config_loader.py  logger.py  safety_monitor.py  state.py
src/vision/: __init__.py  vision_system.py
tests/: test_basic.py
tests/integration/: README.md
tests/unit/: README.md
